k8s/catalog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-api
  labels:
    app: catalog-api
spec:
  selector:
    app: catalog-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
